# mcp-chatbot-amex

./: Dockerfile.api  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
apps/api/: main.py  mcp_client.py  models.py
apps/api/prompts/: loader.py  system-prompt.md
apps/api/routers/: __init__.py  chat.py  data.py  tools.py
mcp_mock/: server.py
scripts/: test_mcp.py
src/amex_core/: logging.py  observability.py  settings.py
src/amex_core/data/: amex_cards.json  customers_profile.json  faq_knowledge.json  offers.json  spending_categories.json
src/amex_core/services/: __init__.py  mock_store.py
